--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
     <header class="header page__header">
       <div class="header__logo"></div>
     </header>
+    <main class="content">
+      <section class="profile content__profile">
+        <img src="./images/avatar.jpg" alt="Аватар пользователя" class="profile__avatar">
+        <div class="profile__info">
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <button type="button" class="profile__edit-button">
+            <img src="./images/pencil.png" alt="Кнопка изменения профиля">
+          </button>
+          <p class="profile__subtitle">Исследователь океана</p>
+        </div>
+        <button type="button" class="profile__add-button">
+          <img src="./images/plus.png" alt="Кнопка добавить запись">
+        </button>
+      </section>
+
+    </main>
 
   </div>
 </body>
