--- a/index.html
+++ b/index.html
@@ -80,7 +80,22 @@
     <footer class="footer page__footer">
       <p class="footer__copyright">&copy; 2023 Mesto Russia</p>
     </footer>
+
+    <div class="popup">
+      <div class="popup__container">
+        <button type="button" class="popup__close"></button>
+        <h3 class="popup__title">Редактировать профиль</h3>
+        <form name="edit-form" action="#" class="popup__form">
+          <input type="text" class="popup__input popup__input_type_name" name="name" value="Жак-Ив Кусто"
+            placeholder="Ваше имя">
+          <input type="text" class="popup__input popup__input_type_job" name="job" value="Исследователь океана"
+            placeholder="Вид деятельности">
+          <button type="submit" class="popup__save-button">Сохранить</button>
+        </form>
+      </div>
+    </div>
   </div>
+  <script src="./pages/index.js"></script>
 </body>
 
 </html>
