--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mecto</title>
+  <title>Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
@@ -21,13 +21,13 @@
           <div class="profile__item">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button type="button" class="profile__edit-button">
-              <img src="./images/pencil.svg" alt="Кнопка изменения профиля">
+              <img src="./images/pencil.svg" alt="Кнопка изменения профиля" class="profile__edit-image">
             </button>
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
         <button type="button" class="profile__add-button">
-          <img src="./images/plus.svg" alt="Кнопка добавить запись">
+          <img src="./images/plus.svg" alt="Кнопка добавить запись" class="profile__add-image">
         </button>
       </section>
 
@@ -42,7 +42,7 @@
         <div class="element elements__element">
           <img src="./images/Elbrus.jpg" alt="гора Эльбрус" class="element__image">
           <div class="element__container">
-            <h2 class="element__title">гора Эльбрус</h2>
+            <h2 class="element__title">Гора Эльбрус</h2>
             <button type="button" class="element__like-button"></button>
           </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="element elements__element">
           <img src="./images/Elbrus.jpg" alt="гора Эльбрус" class="element__image">
           <div class="element__container">
-            <h2 class="element__title">гора Эльбрус</h2>
+            <h2 class="element__title">Гора Эльбрус</h2>
             <button type="button" class="element__like-button"></button>
           </div>
         </div>
@@ -86,16 +86,14 @@
         <button type="button" class="popup__close"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
         <form name="edit-form" action="#" class="popup__form">
-          <input type="text" class="popup__input popup__input_type_name" name="name" value="Жак-Ив Кусто"
-            placeholder="Ваше имя">
-          <input type="text" class="popup__input popup__input_type_job" name="job" value="Исследователь океана"
-            placeholder="Вид деятельности">
+          <input type="text" class="popup__input popup__input_type_name" name="name" placeholder="Ваше имя">
+          <input type="text" class="popup__input popup__input_type_job" name="job" placeholder="Вид деятельности">
           <button type="submit" class="popup__save-button">Сохранить</button>
         </form>
       </div>
     </div>
   </div>
-  <script src="./pages/index.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
