--- a/index.html
+++ b/index.html
@@ -20,60 +20,18 @@
         <div class="profile__info">
           <div class="profile__item">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <button type="button" class="profile__edit-button">
+            <button type="button" class="profile__edit-button" aria-label="Изменить профиль">
               <img src="./images/pencil.svg" alt="Кнопка изменения профиля" class="profile__edit-image">
             </button>
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button type="button" class="profile__add-button">
+        <button type="button" class="profile__add-button" aria-label="Создать новое место">
           <img src="./images/plus.svg" alt="Кнопка добавить запись" class="profile__add-image">
         </button>
       </section>
 
       <section class="elements content__elements">
-        <div class="element elements__element">
-          <img src="./images/Karachayevsk.jpg" alt="фотография Карачаевск" class="element__image">
-          <div class="element__container">
-            <h2 class="element__title">Карачаевск</h2>
-            <button type="button" class="element__like-button"></button>
-          </div>
-        </div>
-        <div class="element elements__element">
-          <img src="./images/Elbrus.jpg" alt="гора Эльбрус" class="element__image">
-          <div class="element__container">
-            <h2 class="element__title">Гора Эльбрус</h2>
-            <button type="button" class="element__like-button"></button>
-          </div>
-        </div>
-        <div class="element elements__element">
-          <img src="./images/Dombay.jpg" alt="фотография Домбай" class="element__image">
-          <div class="element__container">
-            <h2 class="element__title">Домбай</h2>
-            <button type="button" class="element__like-button"></button>
-          </div>
-        </div>
-        <div class="element elements__element">
-          <img src="./images/Elbrus.jpg" alt="гора Эльбрус" class="element__image">
-          <div class="element__container">
-            <h2 class="element__title">Гора Эльбрус</h2>
-            <button type="button" class="element__like-button"></button>
-          </div>
-        </div>
-        <div class="element elements__element">
-          <img src="./images/Dombay.jpg" alt="фотография Домбай" class="element__image">
-          <div class="element__container">
-            <h2 class="element__title">Домбай</h2>
-            <button type="button" class="element__like-button"></button>
-          </div>
-        </div>
-        <div class="element elements__element">
-          <img src="./images/Karachayevsk.jpg" alt="фотография Карачаево-Черкессия" class="element__image">
-          <div class="element__container">
-            <h2 class="element__title">Карачаево-Черкессия</h2>
-            <button type="button" class="element__like-button"></button>
-          </div>
-        </div>
       </section>
     </main>
 
@@ -81,17 +39,51 @@
       <p class="footer__copyright">&copy; 2023 Mesto Russia</p>
     </footer>
 
-    <div class="popup">
+    <div class="popup popup_type_edit-profile">
       <div class="popup__container">
-        <button type="button" class="popup__close"></button>
+        <button type="button" class="popup__close" aria-label="Закрыть"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <form name="edit-form" action="#" class="popup__form">
+        <form name="edit-form" action="#" class="popup__form popup__form_type_edit-profile">
           <input type="text" class="popup__input popup__input_type_name" name="name" placeholder="Ваше имя">
           <input type="text" class="popup__input popup__input_type_job" name="job" placeholder="Вид деятельности">
-          <button type="submit" class="popup__save-button">Сохранить</button>
+          <button type="submit" class="popup__save-button" aria-label="Сохранить">Сохранить</button>
         </form>
       </div>
     </div>
+
+
+    <div class="popup popup_type_add-card">
+      <div class="popup__container">
+        <button type="button" class="popup__close" aria-label="Закрыть"></button>
+        <h3 class="popup__title">Новое место</h3>
+        <form name="add-form" action="#" class="popup__form popup__form_type_add-card">
+          <input type="text" class="popup__input popup__input_type_place-name" name="place-name" placeholder="Название">
+          <input type="text" class="popup__input popup__input_type_link-picture" name="link-picture"
+            placeholder="Ссылка на картинку">
+          <button type="submit" class="popup__save-button" aria-label="Создать">Создать</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup_type_image popup_type_open-image">
+      <div class="popup__image-container">
+        <button type="button" class="popup__close" aria-label="Закрыть"></button>
+        <img src="#" alt="Увеличенное фото" class="popup__open-image">
+        <h3 class="popup__image-title"></h3>
+      </div>
+    </div>
+
+    <template id="card-template">
+      <div class="element elements__element">
+        <button type="button" class="element__delete-image" aria-label="Удалить"></button>
+        <img src="#" alt="#" class="element__image">
+        <div class="element__container">
+          <h2 class="element__title"></h2>
+          <button type="button" class="element__like-button" aria-label="Нравится"></button>
+        </div>
+      </div>
+    </template>
+
   </div>
   <script src="./scripts/index.js"></script>
 </body>
